--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-Django==4.1.3
+Django>=5.1.6
+djangorestframework>=3.14.0
+django-cors-headers>=4.3.1
+black>=24.2.0
+isort>=5.13.2
+sympy>=1.12
+pydantic>=2.10.2    
